Input data path changed
README.md updated.
Project Report added

--- a/notebooks/lstm_model_notebooks/CPIH Inflation - Time Variant Forecast.ipynb
+++ b/notebooks/lstm_model_notebooks/CPIH Inflation - Time Variant Forecast.ipynb
@@ -134,8 +134,8 @@
    ],
    "source": [
     "# Read CPI data from CSV file\n",
-    "cpih_monthly_1950_1988 = pd.read_csv('input/cpi_data_Jan1950_Dec1988.csv')\n",
-    "cpih_monthly_1989_2023 = pd.read_csv('input/cpi_data_Jan1989_Oct2023.csv')\n",
+    "cpih_monthly_1950_1988 = pd.read_csv('../input_data/cpi_data_Jan1950_Dec1988.csv')\n",
+    "cpih_monthly_1989_2023 = pd.read_csv('../input_data/cpi_data_Jan1989_Oct2023.csv')\n",
     "# Concat both the dataframes\n",
     "cpih_data = pd.concat([cpih_monthly_1950_1988, cpih_monthly_1989_2023], axis=0)\n",
     "cpih_data.tail()\n",
