--- a/notebooks/lstm_model_notebooks/GDP Forecasting.ipynb
+++ b/notebooks/lstm_model_notebooks/GDP Forecasting.ipynb
@@ -104,7 +104,7 @@
    ],
    "source": [
     "# Read CPI data from CSV file\n",
-    "gdp_2007_2023 = pd.read_csv('input/gpd_data_Jan2007_Sept2023.csv')\n",
+    "gdp_2007_2023 = pd.read_csv('../input_data/gpd_data_Jan2007_Sept2023.csv')\n",
     "\n",
     "# Extract Year and Month from 'Dates' column\n",
     "gdp_2007_2023['Month'] = gdp_2007_2023['Dates'].str.split('-').str[0].astype('str')\n",
