PBI Dashboard completed for CPI and GDP data

--- a/notebooks/lstm_model_notebooks/GDP Yearly Growth Forecasting.ipynb
+++ b/notebooks/lstm_model_notebooks/GDP Yearly Growth Forecasting.ipynb
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "f299c813-b214-47b5-9a84-c16ee2f943a9",
    "metadata": {},
    "outputs": [
@@ -519,14 +519,14 @@
        "4  1953          5.6"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "gdp_history_data['Change in %'] = gdp_history_data['Change in %'].round(2)\n",
-    "predicted_gdp_growth.to_csv('../output_data/GDP_Growth_Over_next_5_Years.csv', index=False)\n",
+    "gdp_history_data.to_csv('../output_data/GDP_Growth_Historical_Years.csv', index=False)\n",
     "gdp_history_data.head()"
    ]
   },
