Yearly Recession and Inflation model added

--- a/notebooks/lstm_model_notebooks/Optimized code.ipynb
+++ b/notebooks/lstm_model_notebooks/Optimized code.ipynb
@@ -71,7 +71,9 @@
   {
    "cell_type": "markdown",
    "id": "5e8dd387-2089-4755-a478-640e30cb3576",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Implementation for CPI Inflation Forecasting"
    ]
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 93,
    "id": "5199e8ae-c503-4193-9647-db0d25813843",
    "metadata": {},
    "outputs": [
@@ -94,13 +96,122 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       Dates  CPIH  CPI  Average CPIH\n",
-      "0 1950-01-01   4.3  4.1           4.6\n",
-      "1 1950-02-01   4.3  4.1           4.6\n",
-      "2 1950-03-01   4.8  4.7           4.6\n",
-      "3 1950-04-01   5.4  5.5           4.6\n",
-      "4 1950-05-01   3.7  3.7           4.6\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 886 entries, 0 to 417\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column        Non-Null Count  Dtype         \n",
+      "---  ------        --------------  -----         \n",
+      " 0   Dates         886 non-null    datetime64[ns]\n",
+      " 1   CPIH          886 non-null    float64       \n",
+      " 2   CPI           886 non-null    float64       \n",
+      " 3   Average CPIH  886 non-null    float64       \n",
+      "dtypes: datetime64[ns](1), float64(3)\n",
+      "memory usage: 34.6 KB\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Dates</th>\n",
+       "      <th>CPIH</th>\n",
+       "      <th>CPI</th>\n",
+       "      <th>Average CPIH</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>886</td>\n",
+       "      <td>886.000000</td>\n",
+       "      <td>886.000000</td>\n",
+       "      <td>8.860000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1986-11-15 18:21:56.478555328</td>\n",
+       "      <td>4.432957</td>\n",
+       "      <td>4.734424</td>\n",
+       "      <td>4.600000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1950-01-01 00:00:00</td>\n",
+       "      <td>-0.500000</td>\n",
+       "      <td>-0.800000</td>\n",
+       "      <td>4.600000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1968-06-08 12:00:00</td>\n",
+       "      <td>2.100000</td>\n",
+       "      <td>1.900000</td>\n",
+       "      <td>4.600000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1986-11-16 00:00:00</td>\n",
+       "      <td>3.400000</td>\n",
+       "      <td>3.350000</td>\n",
+       "      <td>4.600000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2005-04-23 12:00:00</td>\n",
+       "      <td>5.700000</td>\n",
+       "      <td>5.800000</td>\n",
+       "      <td>4.600000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2023-10-01 00:00:00</td>\n",
+       "      <td>20.400000</td>\n",
+       "      <td>24.500000</td>\n",
+       "      <td>4.600000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.524977</td>\n",
+       "      <td>4.226377</td>\n",
+       "      <td>8.886801e-16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Dates        CPIH         CPI  Average CPIH\n",
+       "count                            886  886.000000  886.000000  8.860000e+02\n",
+       "mean   1986-11-15 18:21:56.478555328    4.432957    4.734424  4.600000e+00\n",
+       "min              1950-01-01 00:00:00   -0.500000   -0.800000  4.600000e+00\n",
+       "25%              1968-06-08 12:00:00    2.100000    1.900000  4.600000e+00\n",
+       "50%              1986-11-16 00:00:00    3.400000    3.350000  4.600000e+00\n",
+       "75%              2005-04-23 12:00:00    5.700000    5.800000  4.600000e+00\n",
+       "max              2023-10-01 00:00:00   20.400000   24.500000  4.600000e+00\n",
+       "std                              NaN    3.524977    4.226377  8.886801e-16"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -118,7 +229,11 @@
     "\n",
     "# Converting the 'Dates' column in the cpi_data DataFrame to datetime format\n",
     "cpi_data['Dates'] = pd.to_datetime(cpi_data['Dates'])\n",
-    "print(cpi_data.head())"
+    "cpi_data.head()\n",
+    "# Handling missing values\n",
+    "cpi_data = cpi_data.dropna()\n",
+    "cpi_data.info()\n",
+    "cpi_data.describe()"
    ]
   },
   {
@@ -701,39 +816,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "adb13d41-ce76-40a6-a445-974633446062",
+   "execution_count": 97,
+   "id": "cbc93c37-e274-422f-85b7-bc51cb369d3b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Change in %       Dates\n",
-      "0          3.3  1949-01-01\n",
-      "1          3.3  1950-01-01\n",
-      "2          3.7  1951-01-01\n",
-      "3          1.5  1952-01-01\n",
-      "4          5.6  1953-01-01\n",
-      "     Dates  GDP Change in %\n",
-      "0  1955 Q2              0.0\n",
-      "1  1955 Q3              2.0\n",
-      "2  1955 Q4             -0.5\n",
-      "3  1956 Q1              1.1\n",
-      "4  1956 Q2             -0.1\n",
-      "        Dates  GDP Change in %\n",
-      "0  1955-04-01              0.0\n",
-      "1  1955-07-01              2.0\n",
-      "2  1955-10-01             -0.5\n",
-      "3  1956-01-01              1.1\n",
-      "4  1956-04-01             -0.1\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 74 entries, 0 to 73\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   Change in %  74 non-null     float64\n",
+      " 1   Dates        74 non-null     object \n",
+      "dtypes: float64(1), object(1)\n",
+      "memory usage: 1.3+ KB\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Change in %</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>74.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2.472973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2.607486</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-10.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.725000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>3.925000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>8.700000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Change in %\n",
+       "count    74.000000\n",
+       "mean      2.472973\n",
+       "std       2.607486\n",
+       "min     -10.400000\n",
+       "25%       1.725000\n",
+       "50%       2.600000\n",
+       "75%       3.925000\n",
+       "max       8.700000"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Reading GDP data from CSV file\n",
     "gdp_yearly_1949_2022 =  pd.read_csv('../input_data/gdp_yearly_1949_2022.csv')\n",
-    "gdp_quarterly_1955_2023 =  pd.read_csv('../input_data/gdp_quarterly_1955_2023.csv')\n",
     "\n",
     "# Transforming 'Year' column in gdp_yearly_1949_2022 to datetime format\n",
     "gdp_yearly_1949_2022['Month'] = '-01-01'\n",
@@ -741,9 +923,116 @@
     "gdp_yearly_1949_2022 = gdp_yearly_1949_2022.drop(columns=['Month'])\n",
     "gdp_yearly_1949_2022['Dates'] = pd.to_datetime(gdp_yearly_1949_2022['Year']).dt.strftime('%Y-%m-%d')\n",
     "gdp_yearly_1949_2022.drop('Year', axis=1, inplace=True)\n",
-    "print(gdp_yearly_1949_2022.head())\n",
     "\n",
-    "print(gdp_quarterly_1955_2023.head())\n",
+    "# Handling missing values\n",
+    "gdp_yearly_1949_2022 = gdp_yearly_1949_2022.dropna()\n",
+    "gdp_yearly_1949_2022.info()\n",
+    "gdp_yearly_1949_2022.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "adb13d41-ce76-40a6-a445-974633446062",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 274 entries, 0 to 273\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   Dates            274 non-null    object \n",
+      " 1   GDP Change in %  274 non-null    float64\n",
+      "dtypes: float64(1), object(1)\n",
+      "memory usage: 4.4+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GDP Change in %</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>274.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.582482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.914640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-20.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>16.800000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       GDP Change in %\n",
+       "count       274.000000\n",
+       "mean          0.582482\n",
+       "std           1.914640\n",
+       "min         -20.300000\n",
+       "25%           0.100000\n",
+       "50%           0.600000\n",
+       "75%           0.900000\n",
+       "max          16.800000"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reading GDP data from CSV file\n",
+    "gdp_quarterly_1955_2023 =  pd.read_csv('../input_data/gdp_quarterly_1955_2023.csv')\n",
+    "\n",
     "# Convert 'Dates' column to \"YYYY-MM-DD\" format\n",
     "def convert_to_date(quarter_year):\n",
     "    year, quarter = quarter_year.split()\n",
@@ -752,7 +1041,11 @@
     "\n",
     "gdp_quarterly_1955_2023['Dates'] = gdp_quarterly_1955_2023['Dates'].apply(convert_to_date)\n",
     "gdp_quarterly_1955_2023['Dates'] = pd.to_datetime(gdp_quarterly_1955_2023['Dates']).dt.strftime('%Y-%m-%d')\n",
-    "print(gdp_quarterly_1955_2023.head())"
+    "\n",
+    "# Handling missing values\n",
+    "gdp_quarterly_1955_2023 = gdp_quarterly_1955_2023.dropna()\n",
+    "gdp_quarterly_1955_2023.info()\n",
+    "gdp_quarterly_1955_2023.describe()"
    ]
   },
   {
